feat: task 01 of month-view
